fix slice pizza shown on top of dark mode btn

--- a/src/css/flyout-menu.css
+++ b/src/css/flyout-menu.css
@@ -86,6 +86,10 @@
   li:nth-child(4)::after {
     left: 75px; 
   }
+  
+  li:nth-child(5)::after {
+    content:none;
+   }
 
 
   :hover::after,
